--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="#about">About</a>
             <a href="#skills">Skill</a>
             <a href="#contact">Contact</a>
+            <a href="#instagram">instagram</a>
         </div>
     </nav>
 
